--- a/BlogCoreNET/Views/Shared/_Layout.cshtml
+++ b/BlogCoreNET/Views/Shared/_Layout.cshtml
@@ -46,6 +46,7 @@
                         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
                     </form>
                 </div>
+                <partial name="_loginPartial" />
             </div>
         </nav>
     </header>
