--- a/BlogCoreNET/Areas/Admin/Views/Categories/Index.cshtml
+++ b/BlogCoreNET/Areas/Admin/Views/Categories/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="container mt-4">
+﻿@{
+	ViewData["Title"] = "Categories List";
+}
+<div class="container mt-4">
 	<div class="row">
 		<div class="col-8">
 			<h2 class="text-primary">List Categories</h2>
