--- a/BlogCoreNET/Areas/Admin/Views/Categories/Index.cshtml
+++ b/BlogCoreNET/Areas/Admin/Views/Categories/Index.cshtml
@@ -13,11 +13,11 @@
 	</div>
 	<br/>
 	<br />
-	<table id="TableCategorys" class="table table-striped table-bordered" style="width: 100%">
+	<table id="TableCategories" class="table table-striped table-bordered" style="width: 100%">
 		<thead>
 			<tr>
-				<th>ID</th>
-				<th>NAME</th>
+				<th>Id</th>
+				<th>Name</th>
 				<th>Order</th>
 				<th>Actions</th>
 			</tr>
@@ -25,5 +25,5 @@
 	</table>
 </div>
 @section Scripts{
-	<script src="~/js/category.js"></script>
+	<script src="/js/category.js"></script>
 }
