--- a/BlogCoreNET/Areas/Admin/Views/Categories/Create.cshtml
+++ b/BlogCoreNET/Areas/Admin/Views/Categories/Create.cshtml
@@ -9,7 +9,7 @@
 </h3>
 <form asp-action="Create" method="POST">
 	<div class="row px-2 offset-1 border">
-		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+		<div asp-validation-summary="All" class="text-danger"></div>
 		<div class="col-10 offset-1 mt-4">
 			<div class="form-group row">
 				<div class="col-4">
@@ -44,3 +44,9 @@
 		</div>
 	</div>
 </form>
+
+@section scripts{
+	@{
+		<partial name="_ValidationScriptsPartial" />
+	}
+}
